# ProjectVoronoi

./: CMakeLists.txt
Clipper/: CMakeLists.txt
Graph-factory/: CMakeLists.txt  Delaunay_psm.cpp  Graph.cpp  Graph.h  GraphMaker.cpp  GraphMaker.h  graphmaker.cpp  graphmaker.cpp.autosave  graphmaker.h
Interface/: CMakeLists.txt  main.cpp  polygoninout.cpp  polygoninout.h  renderarea.cpp  renderarea.h  window.cpp  window.h
MinimalTest/: CMakeLists.txt  main.cpp  polygoninout.cpp  polygoninout.h
test/: kitten-slices.txt  test_slice8_case1.txt  test_slice8_case2.txt  test_slice_autointersect.txt  test_slice_square.txt
